# sphinx-pyscript

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  convert_json_to_toml.py  example_md.md  example_rst.rst  hallo_world-0.1.0-py2.py3-none-any.whl  index.md
sphinx_pyscript/: __init__.py  mini-coi.js  sphinx_pyscript.py
src/: sphinx_pyscript.py
tests/: test_basic.py
