[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_pyscript"
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["sphinx", "pyscript"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "sphinx>4",
    "pyyaml",
]

[project.urls]
Home = "https://github.com/chrisjsewell/sphinx_pyscript"
Documentation = "https://sphinx-pyscript.readthedocs.io"

[project.optional-dependencies]
testing = [
    "pytest",
    "sphinx-pytest",
]
docs = [
    "myst-parser",
    "furo",
]

[tool.isort]
profile = "black"
